--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archive",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "private": true,
   "description": "articles",
   "scripts": {
@@ -8,7 +8,8 @@
     "release": "rm -rf node_modules && npm i cloudcmd && npm i && bin/release.js",
     "commit": "git add --all && git commit -m 'chore(archive) update'",
     "push": "git push origin master",
-    "publish": "npm run commit && npm run push"
+    "publish": "npm run commit && npm run push",
+    "wisdom": "npm run release && npm run commit"
   },
   "repository": {
     "type": "git",
