--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "archive",
   "version": "2.4.2",
   "private": true,
+  "changelog": false,
   "description": "articles",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "rm -rf node_modules && npm i cloudcmd && npm i && bin/release.js",
-    "commit": "git add --all && git commit -m 'chore(archive) update'",
-    "push": "git push origin master",
-    "publish": "npm run commit && npm run push",
-    "wisdom": "npm run release && npm run commit"
+    "add": "git add --all",
+    "wisdom": "npm run release && npm run add"
   },
   "repository": {
     "type": "git",
