--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "release": false,
   "description": "articles",
   "scripts": {
-    "release": "rm -rf node_modules && npm i cloudcmd && npm i && bin/release.js",
+    "release": "rm -rf node_modules && npm i && bin/release.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "wisdom": "npm run release --"
   },
@@ -21,14 +21,16 @@
   },
   "homepage": "https://github.com/coderaiser/archive",
   "devDependencies": {
+  },
+  "dependencies": {
     "files-io": "~1.2.5",
     "jag": "~1.0.5",
     "minor": "~1.2.3",
     "place": "~1.1.2",
     "rendy": "~1.1.0",
-    "shortdate": "~1.0.1"
-  },
-  "dependencies": {
-    "async": "~1.3.0"
+    "shortdate": "~1.0.1",
+    "async": "~1.3.0",
+    "cloudcmd": "*",
+    "copymitter": "~1.8.4"
   }
 }
