--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "url": "https://github.com/cloudcmd/archive/issues"
   },
   "homepage": "https://github.com/coderaiser/archive",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
+    "async": "~1.3.0",
+    "cloudcmd": "*",
+    "copymitter": "~1.8.4",
     "files-io": "~1.2.5",
-    "jag": "~1.0.5",
+    "jaguar": "~1.0.2",
     "minor": "~1.2.3",
     "place": "~1.1.2",
     "rendy": "~1.1.0",
-    "shortdate": "~1.0.1",
-    "async": "~1.3.0",
-    "cloudcmd": "*",
-    "copymitter": "~1.8.4"
+    "shortdate": "~1.0.1"
   }
 }
