--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "release": "rm -rf node_modules && npm i && bin/release.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wisdom": "npm run release --"
+    "wisdom": "npm run release --",
+    "nupdate": "nupdate"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
     "url": "https://github.com/cloudcmd/archive/issues"
   },
   "homepage": "https://github.com/coderaiser/archive",
-  "devDependencies": {},
+  "devDependencies": {
+    "nupdate": "~1.0.11"
+  },
   "dependencies": {
     "async": "~1.3.0",
     "cloudcmd": "*",
