--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nupdate": "~1.0.11"
   },
   "dependencies": {
-    "async": "~1.3.0",
+    "async": "^1.4.2",
     "cloudcmd": "*",
     "copymitter": "~1.8.4",
     "files-io": "~1.2.5",
