--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   },
   "homepage": "https://github.com/coderaiser/archive",
   "devDependencies": {
-    "nupdate": "~2.0.0"
+    "nupdate": "^2.0.0"
   },
   "dependencies": {
     "async": "^1.4.2",
     "cloudcmd": "*",
-    "copymitter": "~1.8.4",
-    "files-io": "~1.2.5",
-    "jaguar": "~1.1.0",
-    "minor": "~1.2.3",
-    "place": "~1.1.2",
-    "rendy": "~1.1.0",
-    "shortdate": "~1.0.1"
+    "copymitter": "^1.8.4",
+    "files-io": "^1.2.5",
+    "jaguar": "^1.1.0",
+    "minor": "^1.2.3",
+    "place": "^1.1.2",
+    "rendy": "^1.1.0",
+    "shortdate": "^1.0.1"
   }
 }
