--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archive",
-  "version": "5.0.3",
+  "version": "5.0.4",
   "private": true,
   "changelog": false,
   "release": false,
@@ -20,8 +20,7 @@
     "url": "https://github.com/cloudcmd/archive/issues"
   },
   "homepage": "https://github.com/coderaiser/archive",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "async": "^1.4.2",
     "cloudcmd": "*",
