feature(package) redrun v4.0.0

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "release": false,
   "description": "articles",
   "scripts": {
-    "release": "rm -rf node_modules && npm i && bin/release.js && upload",
+    "release": "rm -rf node_modules && npm i && bin/release.js && redrun upload",
     "upload": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`.tar.gz",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wisdom": "npm run release --"
+    "wisdom": "redrun release --"
   },
   "repository": {
     "type": "git",
@@ -30,9 +30,10 @@
     "minor": "^1.2.3",
     "place": "^1.1.2",
     "putasset": "^1.0.1",
+    "redrun": "^4.0.0",
     "rendy": "^1.1.0",
     "shortdate": "^1.0.1",
     "version-io": "^1.2.5"
   },
-  "dependencies": {},
+  "dependencies": {}
 }
