feature(archive) cl, pack -> npm run build
Instead of install cloudcmd and then copy to folder cloudcmd-v`version`
excluding not neaded packages, Cloud Commander will be donwloaded from github
unpacked, installed with `--production` flag and then packed again

--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "archive",
-  "version": "6.3.1",
+  "version": "6.3.0",
   "private": true,
   "changelog": false,
-  "release": false,
+  "release": true,
   "description": "articles",
+  "config": {
+    "url": "https://github.com/coderaiser/cloudcmd/archive/master.tar.gz"
+  },
   "scripts": {
     "release": "rm -rf node_modules && npm i && bin/release.js",
-    "upload": "putasset -u coderaiser -r cloudcmd -t v`version` -f cloudcmd-v`version`.tar.gz",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wisdom": "npm run release --",
+    "download": "curl -N $npm_package_config_url > master.tar.gz",
+    "unpack": "echo 'UNPACK...'; jaguar -x master.tar.gz",
+    "install": "echo 'INSTALL...'; cd cloudcmd-master && npm i --production && cd ..",
+    "mv": "mv cloudcmd-master cloudcmd-v$wisdom_version",
+    "pack": "echo 'PACK...';j aguar -p cloudcmd-v$wisdom_version",
+    "rm:archive": "rm master.tar.gz",
+    "rm:folder": "rm -rf cloudcmd-v$wisdom_version",
+    "upload": "putasset -u coderaiser -r cloudcmd -t v$wisdom_version -f cloudcmd-v`version`.tar.gz",
+    "build": "redrun download unpack install mv pack rm:*",
+    "wisdom": "npm run build",
     "wisdom:done": "redrun upload",
     "lint": "redrun lint:*",
     "lint:eslint": "eslint --rule 'no-console:0' bin lib"
@@ -25,19 +36,12 @@
   },
   "homepage": "https://github.com/coderaiser/archive",
   "devDependencies": {
-    "async": "^2.1.2",
-    "cloudcmd": "*",
-    "copymitter": "^2.0.0",
     "eslint": "^3.14.1",
-    "files-io": "^1.2.5",
     "jaguar": "^3.0.1",
-    "minor": "^1.2.3",
     "place": "^1.1.2",
     "putasset": "^1.0.1",
     "redrun": "^5.0.0",
-    "rendy": "^1.1.0",
-    "shortdate": "^1.0.1",
-    "version-io": "^1.2.5"
+    "shortdate": "^1.0.1"
   },
   "dependencies": {}
 }
