--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "archive",
-  "version": "6.3.0",
+  "version": "6.4.0",
   "private": true,
   "changelog": false,
-  "release": true,
-  "description": "articles",
+  "release": false,
   "config": {
     "url": "https://github.com/coderaiser/cloudcmd/archive/master.tar.gz"
   },
   "scripts": {
     "release": "rm -rf node_modules && npm i && bin/release.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "download": "curl -N $npm_package_config_url > master.tar.gz",
+    "download": "curl -NL $npm_package_config_url > master.tar.gz",
     "unpack": "echo 'UNPACK...'; jaguar -x master.tar.gz",
     "install": "echo 'INSTALL...'; cd cloudcmd-master && npm i --production && cd ..",
     "mv": "mv cloudcmd-master cloudcmd-v$wisdom_version",
-    "pack": "echo 'PACK...';j aguar -p cloudcmd-v$wisdom_version",
+    "pack": "echo 'PACK...';jaguar -p cloudcmd-v$wisdom_version",
     "rm:archive": "rm master.tar.gz",
     "rm:folder": "rm -rf cloudcmd-v$wisdom_version",
     "upload": "putasset -u coderaiser -r cloudcmd -t v$wisdom_version -f cloudcmd-v`version`.tar.gz",
