--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "download": "curl -NL $npm_package_config_url > master.tar.gz",
     "unpack": "echo 'UNPACK...'; jaguar -x master.tar.gz",
-    "install": "echo 'INSTALL...'; cd cloudcmd-master && npm i --production && cd ..",
+    "install:cloudcmd": "echo 'INSTALL...'; cd cloudcmd-master && npm i --production && cd ..",
     "mv": "mv cloudcmd-master cloudcmd-v$wisdom_version",
     "pack": "echo 'PACK...';jaguar -p cloudcmd-v$wisdom_version",
     "rm:archive": "rm master.tar.gz",
     "rm:folder": "rm -rf cloudcmd-v$wisdom_version",
     "upload": "putasset -u coderaiser -r cloudcmd -t v$wisdom_version -f cloudcmd-v`version`.tar.gz",
-    "build": "redrun download unpack install mv pack rm:*",
+    "build": "redrun download unpack install:* mv pack rm:*",
     "wisdom": "npm run build",
     "wisdom:done": "redrun upload",
     "lint": "redrun lint:*",
