--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
   "private": true,
   "changelog": false,
   "release": false,
-  "config": {
-    "url": "https://github.com/coderaiser/cloudcmd/archive/master.tar.gz"
-  },
   "scripts": {
-    "release": "rm -rf node_modules && npm i && bin/release.js",
+    "release": "bin/release.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "download": "curl -NL $npm_package_config_url > master.tar.gz",
-    "unpack": "echo 'UNPACK...'; jaguar -x master.tar.gz",
-    "install:cloudcmd": "echo 'INSTALL...'; cd cloudcmd-master && npm i --production && cd ..",
-    "mv": "mv cloudcmd-master cloudcmd-v$wisdom_version",
+    "mkdir": "mkdir -p cloudcmd/node_modules",
+    "install:cloudcmd": "echo 'INSTALL...'; cd cloudcmd && npm i cloudcmd && mv node_modules/cloudcmd/* ./ && cd ..",
+    "mv": "mv cloudcmd cloudcmd-v$wisdom_version",
     "pack": "echo 'PACK...';jaguar -p cloudcmd-v$wisdom_version",
-    "rm:archive": "rm master.tar.gz",
     "rm:folder": "rm -rf cloudcmd-v$wisdom_version",
     "upload": "putasset -u coderaiser -r cloudcmd -t v$wisdom_version -f cloudcmd-v$wisdom_version.tar.gz",
-    "build": "redrun download unpack install:* mv pack rm:*",
+    "build": "redrun mkdir install:* mv pack rm:* release",
     "wisdom": "npm run build",
     "wisdom:done": "redrun upload",
     "lint": "redrun lint:*",
